<resources>
    <string name="app_name">IfKakao</string>
    <string name="session">Session</string>
    <string name="coc">CoC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">if(kakao)dev2022</string>
    <string name="divider">divider</string>
    <string name="show_all_schedule">전체 일정표 보기</string>
    <string name="total">전체</string>
    <string name="day_12_7">12월 7일</string>
    <string name="day_12_8">12월 8일</string>
    <string name="day_12_9">12월 9일</string>
    <string name="button_filter_sessions">button_filter_sessions</string>
    <string name="button_close">button_close</string>
    <string name="init_filter">init_filter</string>
    <string name="init">초기화</string>
    <string name="floating_up_button">floating_up_button</string>
    <string name="home_view">home_view</string>
    <string name="see_you_next_year">우리, 내년에 또 만나요 ~\n함께 나아가는 더 나은 세상!</string>
    <string name="finish_conference">카카오 개발자 컨퍼런스가 마무리되었습니다.\n카카오는 개발자와 함께 성장할 수 있도록 더 노력하겠습니다.</string>
    <string name="to_all_session">전체 세션 바로가기</string>
    <string name="share_experience">2022년 한해, 카카오의\n고민과 경험을 공유합니다.</string>
    <string name="highlight_image">highlit_imgae</string>
    <string name="track_icon">track_icon</string>
    <string name="highlight_track">Highlight Track</string>
    <string name="check_highlight_track_desc">2022년 하이라이트 트랙 및 전체 세션을 확인해보세요!</string>
    <string name="go_session">세션 바로가기</string>
    <string name="banner_share">banner_share</string>
    <string name="banner_mono">banner_mono</string>
    <string name="kakao_corp">© Kakao Corp.</string>
    <string name="last_if_kakao">지난 if kakao</string>
    <string name="if_kakao_url">https://if.kakao.com</string>
    <string name="back_session_list">세션 목록으로 돌아가기</string>
    <string name="divisor">   |   </string>
    <string name="share">공유하기</string>
    <string name="session_desc_sample">ifkakaodev2022 컨퍼런스에서 Mobile 관련 기술 발표세션을 소개합니다.\n\n1. 다리는 걸을 뿐.. 만보기 서비스 개발기: 만보기 서비스를 개발하면서 겪은 이야기 by 이현재(cado.avo)\n2. 카카오페이 iOS 웹뷰 소개 및 리팩토링 이야기 by 윤한울(joey.con)\n3. SwiftLayout을 소개합니다.: 선언형 문법으로 가독성 높은 UIKit 코드 작성하기 by 이희종(jay.choi), 최광훈(aiden.h)\n4. 카카오뱅크 iOS 프로젝트의 모듈화 여정: Tuist를 활용한 모듈 아키텍처 설계 사례 by 안정민(damon.ahn)\n5. Brunch Architecture @ayla.k \n6. 카카오페이 앱 리빌딩 스토리: DI, 모듈화, UI를 중심으로 by 심문규(skyler.shin), 강진호( eddy.kang)\n7. 안드로이드 개발 환경 개선을 위한 노력들: Jenkins CI 파이프라인과 리모트 빌드 소개 by 정성민(smith.jspiner), 이재욱(louis.0802), 소준상(june.bee)</string>
    <string name="user_desc_sample">카카오페이 엔지니어들이 성장할 수 있는 문화를 만들고, 카카오페이만의 개발 문화를 널리 알리고 싶은 로라입니다.</string>
    <string name="presentation_button">발표 자료</string>
    <string name="button_favorite">button_favorite</string>
    <string name="button_filter_favorite">button_filter_favorite</string>
</resources>