<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/see_you_next_year"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/finish_conference"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="13sp" />

    <Button
        android:id="@+id/to_all_session_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rounded"
        android:text="@string/to_all_session"
        android:textColor="@color/black"
        app:backgroundTint="@color/sky_blue" />

</LinearLayout>