<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highlight_track"
        android:textAlignment="center"
        android:textColor="@color/dark_white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/check_highlight_track_desc"
        android:textAlignment="center"
        android:textColor="@color/dark_white"
        android:textSize="13sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_highlight_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:itemCount="8"
        tools:listitem="@layout/highlight_track_item" />


    <Button
        android:id="@+id/to_all_session_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_rounded"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/go_session"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/dark_white" />

</LinearLayout>